[gd_scene load_steps=3 format=3 uid="uid://dsqp5q3vfehfn"]

[ext_resource type="Script" path="res://Scenes/Levels/SpawnPoint.gd" id="1_a0e4i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ugsu6"]
radius = 5.0

[node name="Spawn1" type="Node2D"]
script = ExtResource("1_a0e4i")

[node name="SpawnDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="SpawnDetectionRadius" type="CollisionShape2D" parent="SpawnDetection"]
shape = SubResource("CircleShape2D_ugsu6")

[connection signal="body_entered" from="SpawnDetection" to="." method="_on_spawn_detection_body_entered"]
